welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value vuBiscuit
vuBiscuit = false
^Program:6: error: not found: value vuBiscuit
	vuBiscuit = true
        ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
if (estSurBiscuit()) {
^